@@ -1,3 +1,9 @@
+2007-03-22  Casey Marshall  <csm@gnu.org>
+
+	* gnu/javax/net/ssl/provider/ClientHandshake.java (RSAGen.implRun):
+	check keyEncipherment bit of the certificate, and just pass the public
+	key to the cipher.
+
 2007-03-20  Mario Torre  <neugens@limasoftware.net>
 
 	* configure.ac: GConf requirement for building the java.util.prefs backend
